--- a/Stack/SeerStackManagerWidget.ui
+++ b/Stack/SeerStackManagerWidget.ui
@@ -23,7 +23,7 @@
    <item row="0" column="0">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Stack Info</string>
+      <string>栈信息</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
