--- a/BaseDebug/SeerBreakpointCreateDialog.ui
+++ b/BaseDebug/SeerBreakpointCreateDialog.ui
@@ -17,13 +17,13 @@
    <item>
     <widget class="QGroupBox" name="breakpointLocationGroupBox">
      <property name="title">
-      <string>Breakpoint Location</string>
+      <string>断点位置</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
        <widget class="QLabel" name="filenameLabel">
         <property name="text">
-         <string>Filename</string>
+         <string>文件名</string>
         </property>
        </widget>
       </item>
@@ -37,7 +37,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="lineNumberLabel">
         <property name="text">
-         <string>Line number</string>
+         <string>行数</string>
         </property>
        </widget>
       </item>
@@ -64,7 +64,7 @@
       <item row="2" column="0">
        <widget class="QLabel" name="functionLabel">
         <property name="text">
-         <string>Function</string>
+         <string>函数</string>
         </property>
        </widget>
       </item>
@@ -78,7 +78,7 @@
       <item row="3" column="0">
        <widget class="QLabel" name="labelLabel">
         <property name="text">
-         <string>Label</string>
+         <string>标签</string>
         </property>
        </widget>
       </item>
@@ -108,13 +108,13 @@
    <item>
     <widget class="QGroupBox" name="breakpointTypeGroupBox">
      <property name="title">
-      <string>Breakpoint Type</string>
+      <string>断点类型</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
        <widget class="QCheckBox" name="temporaryCheckBox">
         <property name="text">
-         <string>Temporary</string>
+         <string>临时</string>
         </property>
        </widget>
       </item>
@@ -134,7 +134,7 @@
       <item row="0" column="2">
        <widget class="QCheckBox" name="conditionalCheckBox">
         <property name="text">
-         <string>Conditional</string>
+         <string>条件</string>
         </property>
        </widget>
       </item>
@@ -148,7 +148,7 @@
       <item row="1" column="0">
        <widget class="QCheckBox" name="hardwareCheckBox">
         <property name="text">
-         <string>Hardware</string>
+         <string>硬件</string>
         </property>
        </widget>
       </item>
@@ -168,7 +168,7 @@
       <item row="1" column="2">
        <widget class="QCheckBox" name="ignoreCountCheckBox">
         <property name="text">
-         <string>Ignore Count</string>
+         <string>忽略n次</string>
         </property>
        </widget>
       </item>
@@ -182,7 +182,7 @@
       <item row="2" column="0">
        <widget class="QCheckBox" name="pendingCheckBox">
         <property name="text">
-         <string>Pending</string>
+         <string>等待</string>
         </property>
        </widget>
       </item>
@@ -216,7 +216,7 @@
       <item row="3" column="0">
        <widget class="QCheckBox" name="disabledCheckBox">
         <property name="text">
-         <string>Disabled</string>
+         <string>不启用</string>
         </property>
        </widget>
       </item>
