--- a/BaseDebug/SeerCatchpointsBrowserWidget.ui
+++ b/BaseDebug/SeerCatchpointsBrowserWidget.ui
@@ -21,12 +21,12 @@
      </property>
      <column>
       <property name="text">
-       <string>Number</string>
+       <string>编号</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Type</string>
+       <string>类型</string>
       </property>
      </column>
      <column>
@@ -36,7 +36,7 @@
      </column>
      <column>
       <property name="text">
-       <string>Enabled</string>
+       <string>启用</string>
       </property>
      </column>
      <column>
@@ -46,27 +46,27 @@
      </column>
      <column>
       <property name="text">
-       <string>Catch Type</string>
+       <string>捕捉类型</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Name</string>
+       <string>名称</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Thread Groups</string>
+       <string>线程组</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Times</string>
+       <string>次数</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Used</string>
+       <string>是否使用</string>
       </property>
      </column>
     </widget>
