--- a/Editor/SeerCloseSourceDialog.ui
+++ b/Editor/SeerCloseSourceDialog.ui
@@ -43,12 +43,12 @@
      </property>
      <column>
       <property name="text">
-       <string>File</string>
+       <string>文件</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Full Name</string>
+       <string>路径</string>
       </property>
      </column>
     </widget>
