--- a/Editor/SeerEditorWidget.ui
+++ b/Editor/SeerEditorWidget.ui
@@ -19,7 +19,7 @@
      <item row="1" column="3">
       <widget class="QToolButton" name="alternateAddToGlobalToolButton">
        <property name="toolTip">
-        <string>Add path to global list of alternate directories.</string>
+        <string>添加路径到全局路径列表中</string>
        </property>
        <property name="text">
         <string>...</string>
@@ -40,7 +40,7 @@
      <item row="1" column="4">
       <widget class="QToolButton" name="alternateCloseToolButton">
        <property name="toolTip">
-        <string>Close the alternate bar.</string>
+        <string>关闭</string>
        </property>
        <property name="text">
         <string>...</string>
@@ -61,10 +61,10 @@
      <item row="1" column="0">
       <widget class="QLineEdit" name="alternateLineEdit">
        <property name="toolTip">
-        <string>Enter path for alternate location.</string>
+        <string>输入文件位置</string>
        </property>
        <property name="placeholderText">
-        <string>Enter /path/to/alternate/location</string>
+        <string>输入 /文件可能路径</string>
        </property>
        <property name="clearButtonEnabled">
         <bool>true</bool>
@@ -74,7 +74,7 @@
      <item row="1" column="1">
       <widget class="QToolButton" name="alternateFileOpenToolButton">
        <property name="toolTip">
-        <string>Open file dialog for alternate location.</string>
+        <string>定位文件</string>
        </property>
        <property name="text">
         <string>...</string>
@@ -108,10 +108,10 @@
         </sizepolicy>
        </property>
        <property name="toolTip">
-        <string>Enter text to search for.</string>
+        <string>输入要搜索的文本</string>
        </property>
        <property name="placeholderText">
-        <string>Enter search text</string>
+        <string>输入要搜索的文本</string>
        </property>
        <property name="clearButtonEnabled">
         <bool>true</bool>
@@ -121,7 +121,7 @@
      <item>
       <widget class="QCheckBox" name="matchCaseCheckBox">
        <property name="text">
-        <string>Match Case</string>
+        <string>区分大小写</string>
        </property>
       </widget>
      </item>
@@ -135,13 +135,13 @@
      <item>
       <widget class="QToolButton" name="searchDownToolButton">
        <property name="toolTip">
-        <string>Search for the next occurance.</string>
+        <string>搜索下一个</string>
        </property>
        <property name="text">
         <string>...</string>
        </property>
        <property name="icon">
-        <iconset>
+        <iconset resource="../SeeDataStructureRc.qrc">
          <normaloff>:/resources/RelaxLightIcons/go-down.svg</normaloff>:/resources/RelaxLightIcons/go-down.svg</iconset>
        </property>
       </widget>
@@ -149,13 +149,13 @@
      <item>
       <widget class="QToolButton" name="searchUpToolButton">
        <property name="toolTip">
-        <string>Search for the previous occurance.</string>
+        <string>搜索上一个</string>
        </property>
        <property name="text">
         <string>...</string>
        </property>
        <property name="icon">
-        <iconset>
+        <iconset resource="../SeeDataStructureRc.qrc">
          <normaloff>:/resources/RelaxLightIcons/go-up.svg</normaloff>:/resources/RelaxLightIcons/go-up.svg</iconset>
        </property>
       </widget>
@@ -179,7 +179,7 @@
         <string>Scroll to a specific line.</string>
        </property>
        <property name="placeholderText">
-        <string>Go to line #</string>
+        <string>跳转到行号 #</string>
        </property>
       </widget>
      </item>
@@ -193,13 +193,13 @@
      <item>
       <widget class="QToolButton" name="searchCloseToolButton">
        <property name="toolTip">
-        <string>Close the search bar.</string>
+        <string>关闭搜索栏</string>
        </property>
        <property name="text">
         <string>...</string>
        </property>
        <property name="icon">
-        <iconset>
+        <iconset resource="../SeeDataStructureRc.qrc">
          <normaloff>:/resources/RelaxLightIcons/list-remove.svg</normaloff>:/resources/RelaxLightIcons/list-remove.svg</iconset>
        </property>
       </widget>
