--- a/Editor/SeerTypeBrowserWidget.ui
+++ b/Editor/SeerTypeBrowserWidget.ui
@@ -21,22 +21,22 @@
      </property>
      <column>
       <property name="text">
-       <string>Type</string>
+       <string>类型</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>File</string>
+       <string>文件</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Line</string>
+       <string>行数</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Full Name</string>
+       <string>文件路径</string>
       </property>
      </column>
     </widget>
