--- a/Variable/SeerVariableLoggerBrowserWidget.ui
+++ b/Variable/SeerVariableLoggerBrowserWidget.ui
@@ -22,7 +22,7 @@
         <string>Add a variable to the loggger.</string>
        </property>
        <property name="placeholderText">
-        <string>Enter a variable name to log</string>
+        <string>输入变量名以记录变量</string>
        </property>
        <property name="clearButtonEnabled">
         <bool>true</bool>
@@ -71,17 +71,17 @@
      </column>
      <column>
       <property name="text">
-       <string>Timestamp</string>
+       <string>时间戳</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Name</string>
+       <string>表达式</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>Value</string>
+       <string>值</string>
       </property>
      </column>
     </widget>
