--- a/viz/double_link.ui
+++ b/viz/double_link.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>916</width>
-    <height>670</height>
+    <height>679</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -148,7 +148,7 @@ border-bottom-right-radius:10px;
             </font>
            </property>
            <property name="text">
-            <string>添加</string>
+            <string>刷新</string>
            </property>
           </widget>
          </item>
